Support JEP-370 foreign memory