@@ -10,3 +10,7 @@ readme {
         An API and basic implementation for arranging objects in a continuous memory block.
     """.trimIndent()
 }
+
+tasks.jvmTest {
+    jvmArgs("--add-modules", "jdk.incubator.foreign")
+}
